# emacs_setup

./: .dockerignore  .gitignore  .tmux.conf  CLAUDE.md  Dockerfile  Makefile  README.md  aws-mfa-login.sh  config  forgejo-mac-runner.sh  init.el  init.lite.el  install-stt-client.sh  install-stt.sh  render-md.py  run-emacs.sh  tmux-temps.sh  tui.json  zshrc_emacs_setup.sh  zshrc_setup.sh
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.forgejo/workflows/: build-binaries.yml
.github/workflows/: build-binaries.yml  release.yml
derp/: cloud-init.yaml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
forgejo-backup/: README.md  forgejo-backup.service  forgejo-backup.sh  forgejo-backup.timer
helix/: config.toml  languages.toml
inline-suggestion/: Makefile  inline-suggestion.el
local-llm/: .gitignore  CLAUDE.md  Makefile  README.md  local-llm.service  server.py  start.sh  test_stt.py
pieces-daemon/: Cargo.toml
pieces-daemon/ci/: upload-asset.sh
pieces-daemon/src/: main.rs  models.rs  store.rs
pieces-daemon/src/web/: markdown.rs  mod.rs  views.rs
plans/: HiNet_DERP.md  R3S_hardening.md  forgejo_backup_r3s.md  forgejo_backup_r3s_runbook.md  forgejo_ci_selfhosted.md  forgejo_home_cloud.md  forgejo_install_m6.md  magit_forge.md  tailscale_derp.md
skills/bounce/: SKILL.md
skills/collect/: SKILL.md
skills/pieces/: SKILL.md  pieces.sh
skills/recall/: SKILL.md
stt-daemon/: Cargo.toml  Cross.toml
stt-daemon/src/: main.rs
stt-daemon/tests/: toggle_integration_test.rs
tests/: test-install-stt.sh
(+5 files in other folders)
