[package]
name = "stt-daemon"
version = "0.3.1"
edition = "2021"
license = "UNLICENSED"

[[bin]]
name = "stt-daemon"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
cpal = "0.15"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
